youfull/objects/Lead_Metrics__c.object
<CustomObject>
    <fields>
        <fullName>ACCT_NR__c</fullName>
        <description>Refers to User__r.ACCT_NR__c</description>
        <inlineHelpText>Refers to User__r.ACCT_NR__c</inlineHelpText>
        <label>ACCT_NR</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AGL_1st_Time_Contacted__c</fullName>
        <inlineHelpText>COUNT * where  Lead Type= AGL AND  Contact Type IN(Cust, Rep) AND First_Contacted_CMPGN_NR__c = Current Campaign</inlineHelpText>
        <label>AGL - 1st Time Contacted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Appointed__c</fullName>
        <formula>AGL_Rep_Cl_App__c + AGL_Cust_Closed_App__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AGL - Appointed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Closed__c</fullName>
        <formula>AGL_Rep_Closed__c + AGL_Customer_Closed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AGL - Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Converted__c</fullName>
        <formula>AGL_Rep_Cl_Conv__c + AGL_Cust_Closed_Conv__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AGL - Converted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Cus_IP_Rep_Act_Rec__c</fullName>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Cust AND Status=In Progress AND SubStatus=Rep Account Received</inlineHelpText>
        <label>AGL - Cust -InProgress Rep Acct Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Cus_Rej_Con_No_Int__c</fullName>
        <description>Lead Type= AGL AND Contact Type=Cust AND Status=Rejected AND Sub_Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus=Contacted - No Longer Interested</description>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Cust AND Status=Rejected AND Sub_Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus=Contacted - No Longer Interested</inlineHelpText>
        <label>AGL -Cust Rejected Contacted No Interest</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Cus_Rej_Ex_as_Rep__c</fullName>
        <description>Lead Type= AGL AND Contact Type=Cust AND Status=Rejected AND Sub_Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus=Exists as Representative</description>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Cust AND Status=Rejected AND Sub_Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus=Exists as Representative</inlineHelpText>
        <label>AGL - Customer -Rejected - Exists as Rep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Cust_1st_Time_Con__c</fullName>
        <description># of AGL Customer leads contacted for the first time</description>
        <inlineHelpText># of AGL Customer leads contacted for the first time</inlineHelpText>
        <label>AGL - Cust 1st Time Con</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Cust_Closed_App__c</fullName>
        <label>AGL - Cust - Closed - App</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Cust_Closed_Conv__c</fullName>
        <label>AGL - Customer - Closed - Converted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Cust_Closed_Oth__c</fullName>
        <description>Lead Type= AGL AND Contact Type=Cust AND Status=Closed AND Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus not in (Converted to Customer, Appointed)</description>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Cust AND Status=Closed AND Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus not in (Converted to Customer, Appointed)</inlineHelpText>
        <label>AGL - Customer - Closed - Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Cust_IP_Cont_Sig__c</fullName>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Cust AND Status=In Progress AND SubStatus=Contract Signed</inlineHelpText>
        <label>AGL - Cust - In Progress Contract Signed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Cust_IP_Fol_Up_Pen__c</fullName>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Cust AND Status=In Progress AND SubStatus=Follow Up / Pending</inlineHelpText>
        <label>AGL - Cust - In Progress Follow Up Pend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Cust_In_Pr_Cont__c</fullName>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Cust AND Status=In Progress AND SubStatus=Contacted</inlineHelpText>
        <label>AGL - Customer - In Progress - Contacted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Cust_In_Pr_Deleg__c</fullName>
        <description>Lead Type= AGL AND Contact Type=Cust AND Status=In Progress AND SubStatus= Delegated</description>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Cust AND Status=In Progress AND SubStatus= Delegated</inlineHelpText>
        <label>AGL - Customer - In Progress - Delegated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Cust_In_Pr_Oth__c</fullName>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Cust AND Status=In Progress AND SubStatus not in ( Rolled Up, Rep Account Received, Follow Up / Pending, Contract Signed, Scheduled, Contacted, Delegated, Lead Reassigned)</inlineHelpText>
        <label>AGL - Customer - In Progress - Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Cust_In_Pr_Reas__c</fullName>
        <description>Lead Type= AGL AND Contact Type=Cust AND Status=In Progress AND SubStatus=Lead Reassigned</description>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Cust AND Status=In Progress AND SubStatus=Lead Reassigned</inlineHelpText>
        <label>AGL - Customer - In Progress - Reassigne</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Cust_In_Pr_Rol_Up__c</fullName>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Cust AND Status=In Progress AND SubStatus=Rolled Up</inlineHelpText>
        <label>AGL - Customer - In Progress - Rolled Up</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Cust_In_Pr__c</fullName>
        <formula>AGL_Cust_In_Pr_Reas__c + AGL_Cust_In_Pr_Deleg__c + AGL_Cust_In_Pr_Cont__c + AGL_Cust_In_Pr_sch__c + AGL_Cust_IP_Cont_Sig__c + AGL_Cust_IP_Fol_Up_Pen__c + AGL_Cus_IP_Rep_Act_Rec__c + AGL_Cust_In_Pr_Rol_Up__c + AGL_Cust_In_Pr_Oth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AGL - Customer - In Progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Cust_In_Pr_sch__c</fullName>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Cust AND Status=In Progress AND SubStatus= scheduled</inlineHelpText>
        <label>AGL - Customer - In Progress - scheduled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Cust_N_L_Reas__c</fullName>
        <description>Lead Type= AGL AND Contact Type=Cust AND Status=New AND Substatus=Lead Reassigned</description>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Cust AND Status=New AND Substatus=Lead Reassigned</inlineHelpText>
        <label>AGL - Customer - New - Lead Reassigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Cust_N_N_L__c</fullName>
        <label>AGL - Customer - New - New Lead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Cust_N_Oth__c</fullName>
        <description>Lead Type= AGL AND Contact Type=Cust AND Status=New AND Substatus not in (Rolled Up, Lead Reassigned, Delegated, Escalated, New Lead)</description>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Cust AND Status=New AND Substatus not in (Rolled Up, Lead Reassigned, Delegated, Escalated, New Lead)</inlineHelpText>
        <label>AGL - Customer - New  - Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Cust_N_Rol_Up__c</fullName>
        <description>Lead Type= AGL AND Contact Type=Cust AND Status=New AND Substatus=RolledUp</description>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Cust AND Status=New AND Substatus=RolledUp</inlineHelpText>
        <label>AGL - Customer - New - Rolled Up</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Cust_New_Delg__c</fullName>
        <description>Lead Type= AGL AND Contact Type=Cust AND Status=New AND Substatus=Delegated</description>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Cust AND Status=New AND Substatus=Delegated</inlineHelpText>
        <label>AGL - Customer - New - Delegated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Cust_New_Esc__c</fullName>
        <description>Lead Type= AGL AND Contact Type=Cust AND Status=New AND Substatus=Escalated</description>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Cust AND Status=New AND Substatus=Escalated</inlineHelpText>
        <label>AGL - Customer - New - Escalated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Cust_Rej_Con_Slow__c</fullName>
        <description>Lead Type= AGL AND Contact Type=Cust AND Status=Rejected AND Sub_Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus=Contacted - No response/Slow</description>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Cust AND Status=Rejected AND Sub_Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus=Contacted - No response/Slow</inlineHelpText>
        <label>AGL - Cust -Rejected - Contacted - Slow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Cust_Rej_Dup__c</fullName>
        <description>Lead Type= AGL AND Contact Type=Cust AND Status=Rejected AND Sub_Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus=Duplicate Lead - Appointed by another</description>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Cust AND Status=Rejected AND Sub_Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus=Duplicate Lead - Appointed by another</inlineHelpText>
        <label>AGL - Customer -Rejected - Duplicated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Cust_Rej_Oth__c</fullName>
        <description>Lead Type= AGL AND Contact Type=Cust AND Status=Rejected AND Sub_Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus not in (Wrong Data, Underage, Exists as a Representative, Duplicated Lead - Apppointed by another, Contacted - No longer Interested, Contacted - No response/Slow)</description>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Cust AND Status=Rejected AND Sub_Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus not in (Wrong Data, Underage, Exists as a Representative, Duplicated Lead - Apppointed by another, Contacted - No longer Inte</inlineHelpText>
        <label>AGL - Customer -Rejected - Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Cust_Rej_Wr_Data__c</fullName>
        <description>Lead Type= AGL AND Contact Type=Cust AND Status=Rejected AND Sub_Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus=Wrong Data</description>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Cust AND Status=Rejected AND Sub_Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus=Wrong Data</inlineHelpText>
        <label>AGL - Customer -Rejected - Wrong Data</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Cust_Rej_und__c</fullName>
        <description>Lead Type= AGL AND Contact Type=Cust AND Status=Rejected AND Sub_Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus= underage</description>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Cust AND Status=Rejected AND Sub_Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus= underage</inlineHelpText>
        <label>AGL - Customer -Rejected - underage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Cust_Time_To_Con__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Time to Contact for AGL Customer leads</description>
        <inlineHelpText>Time to Contact for AGL Customer leads</inlineHelpText>
        <label>AGL - Cust Time To Con</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Cust_Time_To_Conv__c</fullName>
        <description>Time to conversion for AGL Customer leads</description>
        <inlineHelpText>Time to conversion for AGL Customer leads</inlineHelpText>
        <label>AGL - Cust Time To Conv</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Customer_Closed__c</fullName>
        <formula>AGL_Cust_Closed_App__c + AGL_Cust_Closed_Conv__c + AGL_Cust_Closed_Oth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AGL - Customer - Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Customer_New__c</fullName>
        <formula>AGL_Cust_N_N_L__c + AGL_Cust_New_Esc__c + AGL_Cust_New_Delg__c + AGL_Cust_N_L_Reas__c + AGL_Cust_N_Rol_Up__c + AGL_Cust_N_Oth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AGL - Customer - New</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Customer_Rejected__c</fullName>
        <formula>AGL_Cus_Rej_Con_No_Int__c + AGL_Cust_Rej_Con_Slow__c + AGL_Cust_Rej_Dup__c + AGL_Cus_Rej_Ex_as_Rep__c + AGL_Cust_Rej_und__c + AGL_Cust_Rej_Wr_Data__c + AGL_Cust_Rej_Oth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AGL - Customer - Rejected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Customer__c</fullName>
        <formula>AGL_Customer_New__c + AGL_Customer_Closed__c + AGL_Customer_Rejected__c + AGL_Cust_In_Pr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AGL - Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_In_Progress__c</fullName>
        <formula>AGL_Rep_In_Progress__c + AGL_Cust_In_Pr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AGL - In Progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_New__c</fullName>
        <formula>AGL_Rep_New__c + AGL_Customer_New__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AGL - New</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rejected__c</fullName>
        <formula>AGL_Rep_Rejected__c + AGL_Customer_Rejected__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AGL - Rejected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep_1st_Time_Con__c</fullName>
        <description># of AGL Rep leads contacted for the first time</description>
        <inlineHelpText># of AGL Rep leads contacted for the first time</inlineHelpText>
        <label>AGL - Rep 1st Time Con</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep_Cl_App__c</fullName>
        <label>AGL - Rep - Closed - Appointed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep_Cl_Conv__c</fullName>
        <label>AGL - Rep - Closed - Converted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep_Cl_Oth__c</fullName>
        <description>Lead Type= AGL AND Contact Type=Rep ANDStatus=Closed AND Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus not in (Converted to Customer, Appointed)</description>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Rep ANDStatus=Closed AND Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus not in (Converted to Customer, Appointed)</inlineHelpText>
        <label>AGL - Rep - Closed - Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep_Closed__c</fullName>
        <formula>AGL_Rep_Cl_App__c + AGL_Rep_Cl_Conv__c + AGL_Rep_Cl_Oth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AGL - Rep - Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep_IP_Cont_Sig__c</fullName>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Rep ANDStatus=In Progress  AND Substatus= Contract Signed</inlineHelpText>
        <label>AGL - Rep - In Progress Contract Signed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep_IP_Cont__c</fullName>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Rep ANDStatus=In Progress  AND Substatus= Contacted</inlineHelpText>
        <label>AGL - Rep - In Progress - Contacted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep_IP_Del__c</fullName>
        <description>Lead Type= AGL AND Contact Type=Rep ANDStatus=In Progress  AND Substatus=  Delegated</description>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Rep ANDStatus=In Progress  AND Substatus=  Delegated</inlineHelpText>
        <label>AGL - Rep - In Progress - Delegated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep_IP_F_Up_P__c</fullName>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Rep ANDStatus=In Progress  AND Substatus= Follow Up / Pending</inlineHelpText>
        <label>AGL - Rep - In Progress- Follow Up /Pend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep_IP_Oth__c</fullName>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Rep ANDStatus=In Progress  AND Substatus not in ( Rolled Up, Rep Account Received, Follow Up / Pending, Contract Signed, Scheduled, Contacted, Delegated, Lead Reassigned)</inlineHelpText>
        <label>AGL - Rep - In Progress - Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep_IP_Reas__c</fullName>
        <description>Lead Type= AGL AND Contact Type=Rep ANDStatus=In Progress  AND Substatus= Lead Reassigned</description>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Rep ANDStatus=In Progress  AND Substatus= Lead Reassigned</inlineHelpText>
        <label>AGL - Rep - In Progress - Reassigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep_IP_Rep_Act_Rec__c</fullName>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Rep ANDStatus=In Progress  AND Substatus= Rep Account Received</inlineHelpText>
        <label>AGL - Rep - InProgress Rep Acct Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep_IP_Rol_Up__c</fullName>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Rep ANDStatus=In Progress  AND Substatus= Rolled Up</inlineHelpText>
        <label>AGL - Rep - In Progress - Rolled Up</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep_IP_sch__c</fullName>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Rep ANDStatus=In Progress  AND Substatus=  scheduled</inlineHelpText>
        <label>AGL - Rep - In Progress - scheduled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep_In_Progress__c</fullName>
        <formula>AGL_Rep_IP_Reas__c + AGL_Rep_IP_Del__c + AGL_Rep_IP_Cont__c + AGL_Rep_IP_sch__c + AGL_Rep_IP_Cont_Sig__c + AGL_Rep_IP_F_Up_P__c + AGL_Rep_IP_Rep_Act_Rec__c + AGL_Rep_IP_Rol_Up__c + AGL_Rep_IP_Oth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AGL - Rep - In Progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep_N_Del__c</fullName>
        <description>Lead Type= AGL AND Contact Type=Rep AND Status=New AND SubStatus=Delegated</description>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Rep AND Status=New AND SubStatus=Delegated</inlineHelpText>
        <label>AGL - Rep - New - Delegated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep_N_L_Reas__c</fullName>
        <description>Lead Type= AGL AND Contact Type=Rep AND Status=New AND SubStatus=Lead Reassigned</description>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Rep AND Status=New AND SubStatus=Lead Reassigned</inlineHelpText>
        <label>AGL - Rep - New - Lead Reassigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep_New_Escalated__c</fullName>
        <description>Lead Type= AGL AND Contact Type=Rep AND Status=New AND SubStatus=Escalated</description>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Rep AND Status=New AND SubStatus=Escalated</inlineHelpText>
        <label>AGL - Rep - New - Escalated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep_New_New_Lead__c</fullName>
        <label>AGL - Rep - New - New Lead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep_New_Others__c</fullName>
        <description>Lead Type= AGL AND Contact Type=Rep AND Status=New AND SubStatus not in (Rolled Up, Lead Reassigned, Delegated, Escalated, New Lead)</description>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Rep AND Status=New AND SubStatus not in (Rolled Up, Lead Reassigned, Delegated, Escalated, New Lead)</inlineHelpText>
        <label>AGL - Rep - New - Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep_New_Rolled_Up__c</fullName>
        <description>Lead Type= AGL AND Contact Type=Rep AND Status=New AND SubStatus=Rolled Up</description>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Rep AND Status=New AND SubStatus=Rolled Up</inlineHelpText>
        <label>AGL - Rep - New - Rolled Up</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep_New__c</fullName>
        <formula>AGL_Rep_New_New_Lead__c + AGL_Rep_New_Escalated__c + AGL_Rep_N_Del__c + AGL_Rep_N_L_Reas__c + AGL_Rep_New_Rolled_Up__c + AGL_Rep_New_Others__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AGL - Rep - New</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep_Rej_Con_No_Int__c</fullName>
        <description>Lead Type= AGL AND Contact Type=Rep AND Status=Rejected AND Sub_Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus=Contacted - No Longer Interested</description>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Rep AND Status=Rejected AND Sub_Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus=Contacted - No Longer Interested</inlineHelpText>
        <label>AGL - Rep Rejected Contacted No Interest</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep_Rej_Cont_Slow__c</fullName>
        <description>Lead Type= AGL AND Contact Type=Rep AND Status=Rejected AND Sub_Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus=Contacted - No response/Slow</description>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Rep AND Status=Rejected AND Sub_Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus=Contacted - No response/Slow</inlineHelpText>
        <label>AGL - Rep - Rejected - Contacted - Slow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep_Rej_Dup_Lead__c</fullName>
        <description>Lead Type= AGL AND Contact Type=Rep AND Status=Rejected AND Sub_Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus=Duplicate Lead - Appointed by another</description>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Rep AND Status=Rejected AND Sub_Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus=Duplicate Lead - Appointed by another</inlineHelpText>
        <label>AGL - Rep - Rejected - Duplicated Lead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep_Rej_Ex_as_Rep__c</fullName>
        <description>Lead Type= AGL AND Contact Type=Rep AND Status=Rejected AND Sub_Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus=Exists as Representative</description>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Rep AND Status=Rejected AND Sub_Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus=Exists as Representative</inlineHelpText>
        <label>AGL - Rep - Rejected - Exists as Rep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep_Rej_Oth__c</fullName>
        <description>Lead Type= AGL AND Contact Type=Rep AND Status=Rejected AND Sub_Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus not in (Wrong Data, Underage, Exists as a Representative, Duplicated Lead - Apppointed by another, Contacted - No longer Interested, Contacted - No response/Slow)</description>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Rep AND Status=Rejected AND Sub_Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus not in (Wrong Data, Underage, Exists as a Representative, Duplicated Lead - Apppointed by another, Contacted - No longer Inter</inlineHelpText>
        <label>AGL - Rep - Rejected - Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep_Rej_Wr_Data__c</fullName>
        <description>Lead Type= AGL AND Contact Type=Rep AND Status=Rejected AND Sub_Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus=Wrong Data</description>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Rep AND Status=Rejected AND Sub_Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus=Wrong Data</inlineHelpText>
        <label>AGL - Rep - Rejected - Wrong Data</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep_Rej_und__c</fullName>
        <description>Lead Type= AGL AND Contact Type=Rep AND Status=Rejected AND Sub_Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus= underage</description>
        <inlineHelpText>Lead Type= AGL AND Contact Type=Rep AND Status=Rejected AND Sub_Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus= underage</inlineHelpText>
        <label>AGL - Rep - Rejected - underage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep_Rejected__c</fullName>
        <formula>AGL_Rep_Rej_Con_No_Int__c + AGL_Rep_Rej_Cont_Slow__c + AGL_Rep_Rej_Dup_Lead__c + AGL_Rep_Rej_Ex_as_Rep__c + AGL_Rep_Rej_und__c +AGL_Rep_Rej_Wr_Data__c  + AGL_Rep_Rej_Oth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AGL - Rep - Rejected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep_Time_To_Con__c</fullName>
        <description>Time to contact for AGL Rep leads</description>
        <inlineHelpText>Time to contact for AGL Rep leads</inlineHelpText>
        <label>AGL - Rep Time To Con</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep_Time_To_Conv__c</fullName>
        <description>Time to conversion for AGL Rep leads</description>
        <inlineHelpText>Time to conversion for AGL Rep leads</inlineHelpText>
        <label>AGL - Rep Time To Conv</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Rep__c</fullName>
        <description>Total count of AGL Rep leads</description>
        <formula>AGL_Rep_New__c + AGL_Rep_Closed__c + AGL_Rep_Rejected__c + AGL_Rep_In_Progress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total count of AGL Rep leads</inlineHelpText>
        <label>AGL - Rep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Time_to_Contact__c</fullName>
        <inlineHelpText>Sum (Time_to_Contact__c)  where Lead Type= AGL AND  Contact Type IN(Cust, Rep) AND First_Contacted_CMPGN_NR__c = Current Campaign</inlineHelpText>
        <label>AGL - Time to Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL_Time_to_Conversion__c</fullName>
        <inlineHelpText>Sum(Time_to_Conversion__c) where Lead Type= AGL AND  Contact Type IN(Cust, Rep) AND Status=Closed AND Sub_Sub_Status_Change_CMPGN_NR__c=Current Campaign</inlineHelpText>
        <label>AGL - Time to Conversion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGL__c</fullName>
        <formula>AGL_Rep__c + AGL_Customer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AGL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPGN_NR__c</fullName>
        <label>CMPGN NR</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FGL_Appointed__c</fullName>
        <formula>FGL_Rep_Closed_App__c + FGL_Cus_Closed_App__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FGL-  Appointed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Closed__c</fullName>
        <formula>FGL_Rep_Closed__c + FGL_Customer_Closed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FGL - Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Contacted_1st_Time__c</fullName>
        <inlineHelpText>COUNT * where  Lead Type= FGL AND  Contact Type IN(Cust, Rep) AND First_Contacted_CMPGN_NR__c = Current Campaign</inlineHelpText>
        <label>FGL - Contacted 1st Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Converted__c</fullName>
        <formula>FGL_Rep_Cl_Conv_Cus__c + FGL_Cus_Cl_Conv_Cus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FGL - Converted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>